Mail: Add option to hide unread count in folder tree
This is a bit of a readability problem that has annoyed me for a while for all Evolution versions over the years: when a folder has unread messages, the entirety of its string in the sidebar (and the Copy/"Move to" dialogs) becomes bold, which feels a bit overpowering:
I just realized now that, considering the fact that the unread count parentheses are left-aligned within the same string as the folder name (i.e. they're not separated to the right), they could be made non-bold... Because the unread count is useful to have as a indicator by its mere presence, but the exact detail/count of it is not "primary" or "primordial" information: quickly being able to read the name of the folder is more important than the unread count, and the bold folder name already indicates that the folder has unread messages.
So instead of, for example:
- Inbox (22+)
- archives diverses
- bug reports (3658)
-
collaborateurs (1)
- blah blah blah (133+)
- FACIL (265)
- etc.
...I would suggest that it looks like this:
- Inbox (22+)
- archives diverses
- bug reports (3658)
-
collaborateurs (1)
- blah blah blah (133+)
- FACIL (265)
- etc.
...which looks much easier on the eyes, and faster to read to find the folder you're looking for.