I#971 - Mail: Add option to hide unread count in folder tree

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/971